--- a/Scripts/Analyses/timeseries_analyses.Rmd
+++ b/Scripts/Analyses/timeseries_analyses.Rmd
@@ -707,7 +707,7 @@ rds_list <- list.files(path = here("Outputs", "STL_Decomposition","Split_datagro
                        pattern='.rds$', all.files=TRUE, full.names=TRUE)
 rds_list<-gtools::mixedsort(rds_list) #arranging chronologically
 
-tic(); for (i in 259:length(rds_list)){
+tic(); for (i in 795:length(rds_list)){
   test_df<- read_rds(rds_list[[i]])
   plan(multisession, workers = numCores)
   tic()
@@ -782,7 +782,7 @@ stl_list <- list.files(path = here("Outputs", "STL_Decomposition","Split_datagro
 stl_list <- gtools::mixedsort(stl_list) #arranging chronologically
 
 
-Sys.time(); for (i in 36:230){
+Sys.time(); for (i in 101:200){ #2 hours
   test_df<- read_rds(rds_list[[i]])
   names(test_df)[15]<- "trend_name"
   plan(multisession, workers = numCores)
@@ -810,70 +810,458 @@ Sys.time(); for (i in 36:230){
   print (paste0(i, "-Complete. Check"))
   gc()
 }; Sys.time()
+```
 
+##############################################4. Results compilation
+```{r}
 
-############################################## CHECKING ABOVE RESULTS
-rds_list2 <- list.files(path = here("Outputs", "Trajectory_Classification","Final_model_combined_ogdata_df"), 
+rds_list2 <- list.files(path = here("Outputs", "Trajectory_Classification","Final_model_df"), 
                        pattern='.rds$', all.files=TRUE, full.names=TRUE)
 rds_list2<-gtools::mixedsort(rds_list2)
 df_list<- list()
-for ( i in 1:length(rds_list2)){
+Sys.time(); for ( i in 1:length(rds_list2)){
+  print (paste0("Counter= ",i))
   selectedmodel_df<- read_rds(rds_list2[[i]])
   df_list[[i]]<- selectedmodel_df
   remove(selectedmodel_df)
   gc()
-}
+}; Sys.time()
 
 selectmodel_df<- do.call(rbind,df_list)
 
-selectmodel_df%>% group_by(model_order) %>% 
-  summarise(count= n()/240) %>% 
-  mutate(percentage= (count/5000)*100)
+### Bar plot
+prop_traj<-selectmodel_df%>% group_by(model_order, shape_class) %>% 
+  summarise(count= n()) %>%
+  mutate(percentage= (count/nrow(selectmodel_df))*100) %>%
+  unite(Model_Shape, c("model_order", "shape_class"))
 
-map_df<- selectmodel_df %>% 
-  dplyr::select(c(x.x, y.x, model_order)) %>% 
-  distinct(x.x, y.x, .keep_all = TRUE) %>%
-  st_as_sf(coords = c("x.x", "y.x"))
-map_df<- map_df %>% mutate(pixelvalue= case_when(model_order=="Null"~1,
-                                                 model_order=="Lin"~2,
-                                                 model_order=="Quad"~3))
+MyPalette <- c(Null_stable_constant ="#CCCCCC", 
+               Lin_decrease_constant= "#332288", 
+               Lin_increase_constant= "#117733", 
+               Lin_stable_constant= "#CC6677",
+               Quad_stable_concave="#AA4499",
+               Quad_stable_convex="#882255")
+
+plot_prop_traj<- 
+  ggplot(prop_traj, aes(x=Model_Shape, y= percentage, fill=Model_Shape)) +
+  geom_bar(stat="identity") +
+  scale_fill_manual(values = MyPalette) +
+  theme_classic()+
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),legend.position="none")
+ggsave(here("Outputs", "Trajectory_Classification", "trajectory_prop_plot.png"), plot = plot_prop_traj,
+       height = 10, width = 10, units = "cm", dpi=700)  
+
+
+### Map making
+Sys.time(); map_raster<- selectmodel_df %>% ungroup() %>%
+  dplyr::select(c(x, y, model_order, shape_class)) %>% 
+  mutate(pixelvalue= case_when(model_order=="Null" & shape_class== "stable_constant"~1,
+                               model_order=="Lin" & shape_class== "decrease_constant"~2,
+                               model_order=="Lin" & shape_class== "inrease_constant"~3,
+                               model_order=="Lin" & shape_class== "stable_constant"~4,
+                               model_order=="Quad" & shape_class== "stable_concave"~5,
+                               model_order=="Quad" & shape_class== "stable_convex"~6)) %>%
+  dplyr::select(-c(model_order, shape_class)) %>%
+  rast(); Sys.time()
+
+
 plot(map_df["pixelvalue"])
 
-#Map of above in terms of percentage
 neighbors<- st_read(here("Data", "Admin", "brazil_neighbors.shp"))
 map_extent<- st_bbox(c(xmin=-77.59, xmax=-31.09,
                        ymin=6.42, ymax=-33.49), crs=4326) %>% st_as_sfc()
 d_trans<- st_read(here ("Data", "Cattelanetal_Clustering", "cerrado_climate_zones.shp"))
 d_trans<- st_transform(d_trans, crs = 4326)
 
+
 tmap_mode("plot")
-modelselect_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
-  tm_shape(d_trans)+ tm_fill()+
-  tm_shape (map_df)+
-  tm_dots(col = "pixelvalue", palette = c(Null= "red", Lin= "blue", Quad="black"))
+modelselect_map<-#tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
+  #tm_shape(d_trans)+ tm_fill()+
+  tm_shape (map_raster)+
+  tm_raster(col = "pixelvalue", style = "cat", palette =MyPalette, legend.show = F) +
+  tm_layout(legend.text.size = 1.5)+
+  tm_add_legend(type = "fill", 
+                labels = c("Null-Stable,Constant", 
+                           "Linear- Decrease, Constant",
+                           "Linear- Increase, Constant",
+                           "Linear- Stable, Constant",
+                           "Quadratic- Stable, Concave",
+                           "Quadratic- Stable, Convex"),
+                col = MyPalette)
+tmap_save(modelselect_map, here("Outputs", "Trajectory_Classification", "trajectory_map.png"),
+          height = 30, width = 30, units = "cm", dpi=700)
 
-remove(map_df, neighbors, map_extent, d_trans, modelselect_map)
+remove(map_raster, plot_prop_traj, prop_traj, neighbors, map_extent, d_trans, modelselect_map)
+remove(MyPalette, rds_list2)
+remove(df_list, selectmodel_df,i)
+```
 
 
-#Quad pixels
-quad_pixels<- selectmodel_df %>% filter(model_order=="Quad") 
+##############################################5. Results interpretation
+Here I look under the hood of the results. basically the resutls are that there
+are no change sin anisoEVI (decomponsed trend) with <10% showing a linear or
+quad trajectory and there are no abrupt shifts at all. So I want to look at 
+example pixels of each of these models and look at the original anisoEVI (interpolated
+and with NAs because lm fits models to data with NA) and see how different the
+results are. I do this for 15 dfs i.e. 15000 pixels and then pick out a couple of
+pixels to visualize and interpret
 
-eg_quad_pixel<- quad_pixels %>% 
-  filter(cell==113954)
-plot(eg_quad_pixel$og_anisoEVI, type="l")
+In the below code chunk I alter the classification function such that
+it uses the og_anisoEVI column of data 
+```{r}
+library(MuMIn)
+class_oganisoEVI_mod <- function (dataset = NULL, interval_size = 0.5) {
+  dataset<- dataset %>% mutate(Months= 1:nrow(dataset))
+  #Trajectory fitting
+  null_mod<- lm(og_anisoEVI ~ 1, data = dataset) ##1. No intercept
+  summary(null_mod) #significant pvalue next to intercept  means that the mean is significantly different from 0
+  nmrs_null<- sqrt(sum(summary(null_mod)$residuals^2)/length(dataset$og_anisoEVI))/sd(dataset$og_anisoEVI, na.rm = T)
+  aic_null<- MuMIn::AICc(null_mod)
 
-#Lin pixels
-lin_pixels<- selectmodel_df %>% filter(model_order=="Lin") 
+  linear_mod<- lm(og_anisoEVI ~ Months, data = dataset) ##2.linear
+  summary(linear_mod)
+  nmrs_lin<- sqrt(sum(summary(linear_mod)$residuals^2)/length(dataset$og_anisoEVI))/sd(dataset$og_anisoEVI, na.rm=T)
+  aic_lin<- MuMIn::AICc(linear_mod)
 
-eg_lin_pixel<- lin_pixels %>% 
-  filter(cell==124023)
-plot(eg_lin_pixel$trend, type="l")
+  orth_poly_mod<- lm(og_anisoEVI ~ poly(Months,2, raw=F), data = dataset) #raw=F means orthogonal polynomials are used
+  summary(orth_poly_mod)
+  nmrs_quad<- sqrt(sum(summary(orth_poly_mod)$residuals^2)/length(dataset$og_anisoEVI))/sd(dataset$og_anisoEVI, na.rm=T)
+  aic_quad<- MuMIn::AICc(orth_poly_mod)
 
-#Null pixels
-null_pixels<- selectmodel_df %>% filter(model_order=="Null") 
+  ## To get relevant values for quadratic output - Directly from Pellise et al., 2024 
+  ## https://github.com/matpelissie/abrupt_shifts_ecological_timeseries_classification/blob/main/R/functions_trajclass.R
+  
+  # After getting Y = gamma*chi + delta*X' + epsilon with orthogonal polynomial,
+  # we have to perform a variable change to obtain relevant values in the X interval 
+  # for first_order_coefficient, second_order_coefficient and intercept, 
+  # knowing that X'= alpha*X + beta and chi = eta*X'^2 + theta
 
-eg_null_pixel<- null_pixels %>% 
-  filter(cell==126268)
-plot(eg_null_pixel$trend, type="l")
+  gammab  <-  orth_poly_mod$coefficients[3]
+  delta  <-  orth_poly_mod$coefficients[2]
+  epsilon  <-  orth_poly_mod$coefficients[1]
+
+  alpha  <-  lm(orth_poly_mod$model[, 2][, 1] ~ dataset$Months[!is.na(dataset$og_anisoEVI)])$coef[2]
+  beta  <-  lm(orth_poly_mod$model[, 2][, 1] ~ dataset$Months[!is.na(dataset$og_anisoEVI)])$coef[1]
+
+  eta  <-  1/lm((orth_poly_mod$model[, 2][, 1])^2 ~
+                orth_poly_mod$model[, 2][, 2])$coef[2]
+  theta  <-  (-lm((orth_poly_mod$model[, 2][, 1])^2 ~
+                  orth_poly_mod$model[, 2][, 2])$coef[1])*eta
+
+  Y2 <- dataset$og_anisoEVI[!is.na(dataset$og_anisoEVI)]*(max(dataset$Months[!is.na(dataset$og_anisoEVI)])-min(dataset$Months[!is.na(dataset$og_anisoEVI)]))/(max(dataset$og_anisoEVI[!is.na(dataset$og_anisoEVI)])-min(dataset$og_anisoEVI[!is.na(dataset$og_anisoEVI)])) 
+
+  # p2 and p3 are relevant when Y and X amplitudes are equivalent,in particular when 
+  # studying scaled-to-1 indices, Y and X amplitudes may be very different, so we 
+  # scaled the amplitudes to calculate p2 and p3
+
+  polynomial_orthonormal_basis <- lm(Y2~poly(dataset$Months[!is.na(dataset$og_anisoEVI)],2, raw=T))$coefficients
+
+  # Quadratic model output:
+  classification <-
+    data.frame(first_order_coefficient = (delta+2*beta*gammab*eta)*alpha,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = (alpha^2)*gammab*eta,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = epsilon+beta*delta+(beta^2)*gammab*eta+gammab*theta,
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
+               # points of interest:
+               p1 = -(delta+2*beta*gammab*eta)/(2*alpha*gammab*eta),
+               p2 = (-polynomial_orthonormal_basis[2]+1)/
+                 (2*polynomial_orthonormal_basis[3]),
+               p3 = (-polynomial_orthonormal_basis[2]-1)/
+                 (2*polynomial_orthonormal_basis[3]),
+               aic = aic_quad,
+               nrmse = nmrs_quad,
+               loc_brk = NA, 
+               trend = NA,
+               mag = NA,
+               rel_chg = NA,
+               SDbef = NA,
+               SDaft = NA)
+  
+  # Linear model output:
+  classification[2,] <-
+    data.frame(first_order_coefficient = delta*alpha,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = 0,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = epsilon+delta*beta,
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
+               p1 = NA,
+               p2 = NA,
+               p3 = NA,
+               aic = aic_lin,
+               nrmse = nmrs_lin,
+               loc_brk = NA, 
+               trend = NA,
+               mag = NA,
+               rel_chg = NA,
+               SDbef = NA,
+               SDaft = NA)
+
+  # No change model output:
+  classification[3,] <-
+    data.frame(first_order_coefficient = 0,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = 0,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = null_mod$coefficients,
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
+               p1 = NA,
+               p2 = NA,
+               p3 = NA,
+               aic = aic_null,
+               nrmse = nmrs_null,
+               loc_brk = NA, 
+               trend = NA,
+               mag = NA,
+               rel_chg = NA,
+               SDbef = NA,
+               SDaft = NA)
+
+
+  # Classification of each model fitted:
+  for (i in 1:3){
+
+    # Compute the derivative at xm-delta and at xm + delta with delta being
+    # half of the input interval size (its 25% of the time interval which is set as 0.5)
+      derivative <-
+        2*(classification$x_m[i] - (dataset$Months[length(dataset$Months)]-dataset$Months[1])*(interval_size/2))*  
+        classification$second_order_coefficient[i] +
+        classification$first_order_coefficient[i]
+      derivative2 <-
+        2*(classification$x_m[i] + (dataset$Months[length(dataset$Months)]-dataset$Months[1])*(interval_size/2))*
+        classification$second_order_coefficient[i] +
+        classification$first_order_coefficient[i]
+
+
+      if(sign(derivative) != sign(derivative2) | i==3){
+      # non consistent direction around x_m
+        classification$derivative[i]  <-  NA
+        classification$intercept_derivative[i]  <-  NA
+
+      } else {
+      # consistent direction around x_m
+        classification$derivative[i] <- mean(c(derivative, derivative2))
+        classification$intercept_derivative[i] <-
+          (classification$second_order_coefficient[i]*classification$x_m[i]^2+
+             classification$first_order_coefficient[i]*classification$x_m[i]+
+              classification$intercept[i]) -
+          classification$x_m[i]*classification$derivative[i]
+      }
+
+    # Compute the derivative of the curvature function to get acceleration:
+      classification$derivated_curvature[i] <-
+        -12*(classification$second_order_coefficient[i]^2)*
+        (2*classification$second_order_coefficient[i]*classification$x_m[i]+
+           classification$first_order_coefficient[i])*
+        (classification$second_order_coefficient[i]/
+           abs(classification$second_order_coefficient[i]))/
+        ((1+(2*classification$second_order_coefficient[i]*classification$x_m[i]+
+            classification$first_order_coefficient[i])^2)^(2.5))
+
+    # Keep derivated curvature even if not significant for polynomial fit:
+      if(classification$second_order_pvalue[i]>0.05 & i != 1){
+        classification$derivated_curvature[i] <- NA
+      }
+
+    # Classify the direction:
+      classification$direction[i] <- NA
+        classification$direction[i][which(
+          classification$derivative[i] > 0)] <- "increase"
+      classification$direction[i][which(
+        classification$derivative[i] < 0)] <- "decrease"
+      classification$direction[i][which(
+        is.na(classification$derivative[i]))] <- "stable"
+      classification$direction[i][which(
+        as.numeric(classification$first_order_pvalue[i])>0.05 &
+          as.numeric(classification$second_order_pvalue[i])>0.05)] <- "stable"
+
+    # Classify the acceleration:
+      classification$acceleration[i] <- NA
+        classification$acceleration[i][which(
+          classification$derivated_curvature[i] < 0)] <- "accelerated"
+      classification$acceleration[i][which(
+        classification$derivated_curvature[i] > 0)] <- "decelerated"
+      classification$acceleration[i][which(
+        classification$direction[i] == "stable" &
+          classification$second_order_coefficient[i] < 0)] <- "concave"
+      classification$acceleration[i][which(
+        classification$direction[i] == "stable" &
+          classification$second_order_coefficient[i] > 0)] <- "convex"
+      classification$acceleration[i][which(
+        is.na(classification$derivated_curvature[i]))] <- "constant"
+
+    # Give the final classification combining direction and acceleration:
+      classification$shape_class[i] <- paste(classification$direction[i],
+                                             classification$acceleration[i],
+                                             sep="_")
+  }
+  
+  # Abrupt breakpoint analyses
+  chng_fit<- chngpt::chngptm(formula.1=og_anisoEVI~1,
+                      formula.2=~Months,
+                      family="gaussian", data=dataset,
+                      type="step",
+                      var.type="bootstrap", weights=NULL)
+
+  pred_chg <- data.frame(timestep = dataset$Months[!is.na(dataset$og_anisoEVI)],
+                         bp = chng_fit$best.fit$fitted.values)
+
+  chng_nrmse <- sqrt(sum(residuals(chng_fit)^2)/length(dataset$og_anisoEVI))/sd(dataset$og_anisoEVI)
+
+  classification[4, 13] <- chng_fit$chngpt
+  classification[4, 11] <- MuMIn::AICc(chng_fit)
+  classification[4, 12] <- chng_nrmse
+  classification[4, 14] <- ifelse(pred_chg$bp[1] >
+                                       pred_chg$bp[length(pred_chg$bp)],
+                                     "decrease", "increase")
+  classification[4, 15] <-  pred_chg$bp[length(pred_chg$bp)] - pred_chg$bp[1]
+  classification[4, 16] <-  (pred_chg$bp[length(pred_chg$bp)] - pred_chg$bp[1]) /
+                        max(abs(pred_chg$bp[length(pred_chg$bp)]),abs(pred_chg$bp[1]))
+  classification[4, 17] <-  dataset %>%
+                                  dplyr::filter(Months<=chng_fit$chngpt) %>%
+                                  dplyr::pull(og_anisoEVI) %>%
+                                  sd()
+  classification[4, 18] <- dataset %>%
+                        dplyr::filter(Months>=chng_fit$chngpt) %>%
+                        dplyr::pull(og_anisoEVI) %>%
+                        sd()
+  
+  row.names(classification) <- c("Y_pol","Y_lin", "Y_nch", "Y_abpt")
+  
+  # classification$cell <- unique(dataset$cell)
+  classification$x <- unique(dataset$x)
+  classification$y <- unique(dataset$y)
+
+  return(classification)
+}
+```
+
+
+```{r}
+#run lines 706- 708 to read in the split dfs
+#run above altered classification funciton using code below
+
+Sys.time(); for (i in 1:10){
+  test_df<- read_rds(rds_list[[i]])
+  plan(multisession, workers = numCores)
+  tic()
+  print ("Starting classification")
+  x <- test_df %>%
+    group_by(cell) %>%
+    nest() %>%
+    mutate(classification_data = furrr::future_map(data, class_oganisoEVI_mod, 
+                                                   .options = furrr_options(seed = TRUE))) %>%
+    select(-data) %>%
+    unnest(classification_data)
+  toc()
+  print ("Writing results")
+  write_rds(x, here("Outputs", "Trajectory_Classification", "Classification_og_anisoEVI_df", 
+                    paste0("classification_og_anisoEVI",i,".rds")))
+  remove(test_df, x)
+  print (paste0(i, "-Complete. Check"))
+  gc()
+}; Sys.time()
+
+remove(i, rds_list)
+
+#run lines lines 749-774 for model select function
+rds_list <- list.files(path = here("Outputs", "Trajectory_Classification","Classification_og_anisoEVI_df"), 
+                       pattern='.rds$', all.files=TRUE, full.names=TRUE)
+rds_list <- gtools::mixedsort(rds_list) #arranging chronologically
+
+Sys.time(); for (i in 1:10){ #2 hours
+  test_df<- read_rds(rds_list[[i]])
+  names(test_df)[15]<- "trend_name"
+  plan(multisession, workers = numCores)
+  tic()
+  x <- test_df %>%
+    group_by(cell) %>%
+    nest() %>%
+    mutate(modelselect_data = furrr::future_map(data, model_select, 
+                                                   .options = furrr_options(seed = TRUE))) %>%
+    select(-data) %>%
+    unnest(modelselect_data)
+  toc()
+  write_rds(x, here("Outputs", "Trajectory_Classification", "Final_model_og_anisoEVI_df", 
+                    paste0("modelselect_og_anisoEVI",i,".rds")))
+  remove(test_df, x)
+  print (paste0(i, "-Complete. Check"))
+  gc()
+};
+
+remove(i, rds_list, model_levels)
+
+#results compilation
+rds_list2 <- list.files(path = here("Outputs", "Trajectory_Classification","Final_model_og_anisoEVI_df"), 
+                       pattern='.rds$', all.files=TRUE, full.names=TRUE)
+rds_list2<-gtools::mixedsort(rds_list2)
+df_list<- list()
+Sys.time(); for ( i in 1:length(rds_list2)){
+  print (paste0("Counter= ",i))
+  selectedmodel_df<- read_rds(rds_list2[[i]])
+  df_list[[i]]<- selectedmodel_df
+  remove(selectedmodel_df)
+  gc()
+}; Sys.time()
+
+selectmodel_df<- do.call(rbind,df_list)
+remove(i, rds_list2)
+
+### Bar plot
+prop_traj<-selectmodel_df%>% group_by(model_order, shape_class, trend_name) %>% 
+  summarise(count= n()) %>%
+  mutate(percentage= (count/nrow(selectmodel_df))*100) %>%
+  unite(Model_Shape_Trend, c("model_order", "shape_class", "trend_name"))
+
+MyPalette <- c(Null_stable_constant_NA ="#CCCCCC", 
+               Lin_decrease_constant_NA = "#332288", 
+               Lin_increase_constant_NA = "#117733", 
+               Lin_stable_constant_NA = "#CC6677",
+               Step_NA_decrease = "#FF3300",
+               Step_NA_increase = "#9900CC",
+               Quad_stable_concave_NA ="#AA4499",
+               Quad_stable_convex_NA ="#882255")
+
+plot_prop_traj<- 
+  ggplot(prop_traj, aes(x=Model_Shape_Trend, y= percentage, fill=Model_Shape_Trend)) +
+  geom_bar(stat="identity") +
+  scale_fill_manual(values = MyPalette) +
+  theme_classic()+
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),legend.position="none")
+ggsave(here("Outputs", "Trajectory_Classification", "Final_model_combined_ogdata_df", "oganisoEVI_trajectory_prop_plot.png"), plot = plot_prop_traj,
+       height = 30, width = 30, units = "cm", dpi=700)  
+
+
+# #Quad pixels
+# quad_pixels<- selectmodel_df %>% filter(model_order=="Quad") 
+# 
+# eg_quad_pixel<- quad_pixels %>% 
+#   filter(cell==113954)
+# plot(eg_quad_pixel$og_anisoEVI, type="l")
+# 
+# #Lin pixels
+# lin_pixels<- selectmodel_df %>% filter(model_order=="Lin") 
+# 
+# eg_lin_pixel<- lin_pixels %>% 
+#   filter(cell==124023)
+# plot(eg_lin_pixel$trend, type="l")
+# 
+# #Null pixels
+# null_pixels<- selectmodel_df %>% filter(model_order=="Null") 
+# 
+# eg_null_pixel<- null_pixels %>% 
+#   filter(cell==126268)
+# plot(eg_null_pixel$trend, type="l")
 
 ```
